--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/react-virtual": "^3.11.2",
@@ -30,7 +32,9 @@
     "@visx/pattern": "^3.13.0-alpha.0",
     "axios": "^1.7.7",
     "axios-mock-adapter": "^2.0.0",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "d3-dsv": "^3.0.1",
     "d3-fetch": "^3.0.1",
     "d3-scale": "^4.0.2",
@@ -38,6 +42,7 @@
     "firebase": "^11.1.0",
     "framer-motion": "11.15.0",
     "html-react-parser": "^5.2.1",
+    "i18next": "^25.7.3",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.562.0",
@@ -58,7 +63,8 @@
     "react-tooltip": "^5.28.0",
     "simplebar-react": "^3.3.0",
     "swr": "^2.3.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "yet-another-react-lightbox": "^3.21.7",
     "zod": "^3.23.8",
     "zustand": "^5.0.2"
