Updated Live ORder Online using Shadcn classes

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@tailwindcss/vite": "^4.1.18",
     "@tanstack/match-sorter-utils": "^8.19.4",
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/react-virtual": "^3.11.2",
@@ -79,7 +81,7 @@
     "@types/d3-scale": "^4.0.8",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.13",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.19.3",
     "@types/react": "19.0.2",
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "19.0.2",
@@ -102,7 +104,7 @@
     "postcss": "^8.4.45",
     "postcss-nesting": "^13.0.0",
     "prettier": "^3.3.3",
-    "tailwindcss": "^4.0.8",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
